# rust-jemmy

./: .gitignore  .tarpaulin.toml  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: release.yml  rust.yml  security-audit.yml
src/: lib.rs
src/field/: combination.rs  core.rs  mod.rs  vector.rs
src/variant/: combination.rs  core.rs  impls.rs  mod.rs
tests/: test_address_book.rs  test_enum_impls.rs  test_field_macros.rs  test_shorts.rs  test_variant_macros.rs
